--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -14,11 +14,9 @@
             </ul>
         </div>
     </div>
-    <h1 th:text="${title}">Title</h1>
-    <div th:text="${message}">Fake content</div>
-    <div id="created" th:text="${#dates.format(date)}">July 11,
-        2012 2:17:16 PM CDT
-    </div>
+    <h1 th:text="${title}">__title__</h1>
+    <div th:text="${message}">__message__</div>
+    <div id="created" th:text="${#dates.format(date)}">__date__</div>
     <form th:action="@{/logout}" method="post">
         <input type="submit" value="Sign Out"/>
     </form>
