--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,7 +4,7 @@
     <title>Login</title>
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" href="../../css/bootstrap.min.css"/>
 </head>
-<body onload="document.f.username.focus();">
+<body onload="document.form.username.focus();">
 <div class="container">
     <div class="navbar">
         <div class="navbar-inner">
