--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -35,6 +35,7 @@
     <div sec:authorize="hasRole('USER')">
         <a th:href="@{/pages/user}">to user page</a>
     </div>
+    <a th:href="@{/pages/guest}">to guest page</a>
     <script th:src="@{/webjars/jquery/jquery.min.js}"
             src="https://code.jquery.com/jquery-1.9.0.min.js"></script>
     <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"
@@ -48,10 +49,13 @@
                 crossorigin="anonymous"></script>
     -->
     <script>
+        $.ajax('/pages/admin')
+        .done(function(data, textStatus, jqXHR){console.log(data, textStatus, jqXHR)})
+        .fail(function(jqXHR, textStatus, errorThrown){console.log(jqXHR, textStatus, errorThrown)});
         $.ajax('/pages/user')
         .done(function(data, textStatus, jqXHR){console.log(data, textStatus, jqXHR)})
         .fail(function(jqXHR, textStatus, errorThrown){console.log(jqXHR, textStatus, errorThrown)});
-        $.ajax('/pages/admin')
+        $.ajax('/pages/guest')
         .done(function(data, textStatus, jqXHR){console.log(data, textStatus, jqXHR)})
         .fail(function(jqXHR, textStatus, errorThrown){console.log(jqXHR, textStatus, errorThrown)});
     </script>
